add dependencies subcommand for skuishy command