@@ -10,10 +10,7 @@ import org.bukkit.plugin.PluginDescriptionFile;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 
 import static lol.aabss.skuishy.Skuishy.*;
 import static lol.aabss.skuishy.other.GetVersion.latestSkriptVersion;
@@ -23,6 +20,25 @@ import static net.kyori.adventure.text.minimessage.MiniMessage.miniMessage;
 
 @SuppressWarnings("deprecation")
 public class SubCommands {
+    public static void cmdDependencies(CommandSender sender){
+        if (!sender.hasPermission("skuishy.command.dependencies")){
+            sender.sendMessage(miniMessage().deserialize(instance.getConfig().getString("permission-message")));
+            return;
+        }
+        StringBuilder builder = new StringBuilder("<dark_gray>--</dark_gray> <color:#00ff00>Skuishy</color> <gray>Dependencies:</gray> <dark_gray>--</dark_gray>").append("\n\n");
+        builder.append("<color:#00ff00>Dependencies:\n</color>");
+        for (String name : element_map.keySet().stream().sorted(Comparator.naturalOrder()).toList()){
+            builder.append("    <gray>").append(name).append(":</gray> ");
+            if (element_map.get(name)){
+                builder.append("<color:#00ff00>TRUE</color>\n");
+            } else {
+                builder.append("<color:#ff0000>FALSE</color>\n");
+            }
+        }
+        builder.append("\n").append("<dark_gray>----------------</dark_gray>");
+        sender.sendMessage(miniMessage().deserialize(builder.toString()));
+    }
+
     public static void cmdInfo(CommandSender sender, @Nullable String plugin){
         if (!sender.hasPermission("skuishy.command.info")) {
             sender.sendMessage(miniMessage().deserialize(instance.getConfig().getString("permission-message")));
@@ -43,7 +59,7 @@ public class SubCommands {
                     if (addon != instance.getAddonInstance()) {
                         PluginDescriptionFile d = addon.plugin.getDescription();
                         msgs.add(
-                                "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#40ff00><VERSION></hover></click>"
+                                "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#00ff00><VERSION></hover></click>"
                                         .replaceAll("<URL>", (d.getWebsite() != null ? d.getWebsite() : ""))
                                         .replaceAll("<AUTHORS>", d.getAuthors() + "")
                                         .replaceAll("<NAME>", d.getName())
@@ -64,7 +80,7 @@ public class SubCommands {
                     if (pl != null && pl != Skript.getInstance()) {
                         PluginDescriptionFile d = pl.getDescription();
                         String msgg =
-                                "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#40ff00><VERSION></hover></click>"
+                                "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#00ff00><VERSION></hover></click>"
                                         .replaceAll("<URL>", (d.getWebsite() != null ? d.getWebsite() : ""))
                                         .replaceAll("<AUTHORS>", d.getAuthors() + "")
                                         .replaceAll("<NAME>", d.getName())
@@ -80,7 +96,7 @@ public class SubCommands {
                 if (pl != null) {
                     PluginDescriptionFile d = pl.getDescription();
                     deps.add(
-                            "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#40ff00><VERSION></hover></click>"
+                            "    <click:open_url:'<URL>'><hover:show_text:'<gray><AUTHORS>'><gray><NAME>: <color:#00ff00><VERSION></hover></click>"
                                     .replaceAll("<URL>", (d.getWebsite() != null ? d.getWebsite() : ""))
                                     .replaceAll("<AUTHORS>", d.getAuthors() + "")
                                     .replaceAll("<NAME>", d.getName())
@@ -114,22 +130,22 @@ public class SubCommands {
             if (p != null) {
                 PluginDescriptionFile d = p.getDescription();
                 List<String> mainl = Arrays.stream(p.getClass().getProtectionDomain().getCodeSource().getLocation().getFile().split("/")).toList();
-                String main = mainl.get(mainl.size()-1);
+                String main = mainl.getLast();
                 sender.sendMessage(miniMessage().deserialize("""
-                        
-                        <dark_gray>-- <color:#40ff00>Skuishy <gray>Info: <dark_gray>--<reset>
-                                            
-                        <gray>Name: <color:#40ff00><NAME>
-                        <gray>File Name: <color:#40ff00><FILENAME>
-                        <gray>Version: <color:#40ff00><VERSION>
-                        <gray>Website: <color:#40ff00><WEBSITE>
-                        <gray>Authors: <color:#40ff00><AUTHORS>
-                        <gray>Contributors: <color:#40ff00><CONTRIBUTORS>
-                        <gray>Description: <color:#40ff00><DESCRIPTION>
-                        <gray>API Version: <color:#40ff00><APIV>
-                        <gray>Prefix: <color:#40ff00><PREFIX>
-                        <gray>Main Class: <color:#40ff00><MAINCLASS>
-                                            
+                       \s
+                        <dark_gray>-- <color:#00ff00>Skuishy <gray>Info: <dark_gray>--<reset>
+                                           \s
+                        <gray>Name: <color:#00ff00><NAME>
+                        <gray>File Name: <color:#00ff00><FILENAME>
+                        <gray>Version: <color:#00ff00><VERSION>
+                        <gray>Website: <color:#00ff00><WEBSITE>
+                        <gray>Authors: <color:#00ff00><AUTHORS>
+                        <gray>Contributors: <color:#00ff00><CONTRIBUTORS>
+                        <gray>Description: <color:#00ff00><DESCRIPTION>
+                        <gray>API Version: <color:#00ff00><APIV>
+                        <gray>Prefix: <color:#00ff00><PREFIX>
+                        <gray>Main Class: <color:#00ff00><MAINCLASS>
+                                           \s
                         <dark_gray>----------------"""
                         .replaceAll("<NAME>", d.getName())
                         .replaceAll("<FILENAME>", main.replaceAll("%20", " "))
@@ -152,11 +168,11 @@ public class SubCommands {
     private static String getString(String sku, String sk) {
         String skuishyv = instance.getDescription().getVersion();
         String skriptv = Skript.getInstance().getDescription().getVersion();
-        return "\n<dark_gray>-- <color:#40ff00>Skuishy <gray>Info: <dark_gray>--<reset>\n\n" +
-                "<gray>Skuishy Version: <color:#40ff00>"+ skuishyv + (!Objects.equals(sku, skuishyv) ? " [Latest: "+ sku + "]" : "") +"<reset>\n" +
-                "<gray>Server Version: <color:#40ff00>"+instance.getServer().getMinecraftVersion()+"<reset>\n" +
-                "<gray>Server Implementation: <color:#40ff00>"+instance.getServer().getVersion()+"<reset>\n" +
-                "<gray>Skript Version: <color:#40ff00>"+skriptv+(!Objects.equals(sk, skriptv) ? " [Latest: "+ sk + "]" : "") +"<reset>\n" +
+        return "\n<dark_gray>-- <color:#00ff00>Skuishy <gray>Info: <dark_gray>--<reset>\n\n" +
+                "<gray>Skuishy Version: <color:#00ff00>"+ skuishyv + (!Objects.equals(sku, skuishyv) ? " [Latest: "+ sku + "]" : "") +"<reset>\n" +
+                "<gray>Server Version: <color:#00ff00>"+instance.getServer().getMinecraftVersion()+"<reset>\n" +
+                "<gray>Server Implementation: <color:#00ff00>"+instance.getServer().getVersion()+"<reset>\n" +
+                "<gray>Skript Version: <color:#00ff00>"+skriptv+(!Objects.equals(sk, skriptv) ? " [Latest: "+ sk + "]" : "") +"<reset>\n" +
                 "<gray>Addons:\n";
     }
 
@@ -167,7 +183,7 @@ public class SubCommands {
         }
         instance.reloadConfig();
         instance.saveConfig();
-        sender.sendMessage(miniMessage().deserialize("<color:#40ff00>Config reloaded!"));
+        sender.sendMessage(miniMessage().deserialize("<color:#00ff00>Config reloaded!"));
     }
 
     public static void cmdUpdate(CommandSender sender){
@@ -177,7 +193,7 @@ public class SubCommands {
         }
         String v = latestVersion();
         if (v.equals(instance.getDescription().getVersion())){
-            sender.sendMessage(miniMessage().deserialize("<color:#40ff00>You are up to date!"));
+            sender.sendMessage(miniMessage().deserialize("<color:#00ff00>You are up to date!"));
         } else{
             latest_version = v;
             updateCheck(sender);
@@ -185,6 +201,6 @@ public class SubCommands {
     }
 
     public static void cmdVersion(CommandSender sender){
-        sender.sendMessage(miniMessage().deserialize("<color:#40ff00>This server is running Skuishy v" + instance.getDescription().getVersion() + " by aabss!"));
+        sender.sendMessage(miniMessage().deserialize("<color:#00ff00>This server is running Skuishy v" + instance.getDescription().getVersion() + " by aabss!"));
     }
 }
